--- a/Language/CN.json
+++ b/Language/CN.json
@@ -187,19 +187,19 @@
   "uiCouldntFindOGFileFor": "找不到原始文件",
   "uiSuccessfullyApplied": "应用成功",
   "uiToFavList": "到收藏夹列表",
-  "uiHoldToRemoveAllAppliedMods": "(长按)将所有应用的MOD从游戏中移除", 
-  "uiAddAllAppliedModsToSets": "将所有应用的MOD添加到MOD SET",
-  "uiAppliedMods": "应用MOD",
-  "uiFilesApplied": "应用文件",
-  "uiNoPreViewAvailable": "没有预览",
+  "uiHoldToRemoveAllAppliedMods": "(长按)将所有已应用的MOD从游戏中移除", 
+  "uiAddAllAppliedModsToSets": "将所有已应用的MOD添加到MOD SET",
+  "uiAppliedMods": "已应用的MOD",
+  "uiFilesApplied": "已应用的文件",
+  "uiNoPreViewAvailable": "无可用预览",
   "uiCreateNewModSet": "创建新的MOD组",
-  "uiEnterNewModSetName": "输入新Mod组名称",
+  "uiEnterNewModSetName": "输入新MOD组名称",
   "uiRemoveAllModsIn": "移除所有MOD",
   "uiSuccessfullyRemoveAllModsIn": "已成功移除所有MOD。",
   "uiApplyAllModsIn": "应用所有MOD",
   "uiSuccessfullyAppliedAllModsIn": "成功应用了所有MOD",
   "uiAddToThisSet": "添加到此组",
-  "uiFromThisSet": "从中",
+  "uiFromThisSet": "从组中",
   "uiToAnotherItem": "转到另一个物品",
   "uiUnableToObtainOrginalFilesFromSegaServers": "无法从SEGA服务器获取原始文件。",
   "uiSwitchingProfile": "交换配置文件",
@@ -222,7 +222,7 @@
   "uiSelectAll": "全选",
   "uiDeselectAll": "全部取消选择",
   "uiHoldToReapplySelectedMods": "(长按)使选择的MOD重新应用于游戏",
-  "uiHoldToRemoveSelectedMods": "(长按)从游戏中删除选定的MOD",
+  "uiHoldToRemoveSelectedMods": "(长按)从游戏中移除选定的MOD",
   "uiAddSelectedModsToModSets": "将选定的MOD添加到MOD组中",
   "uiFailed": "失败",
   "uiFailedToRemove": "移除失败",
@@ -365,8 +365,8 @@
   "uiExtractingFiles": "提取文件",
   "uiReadingspace": "读取空间",
   "uiEditingBoundaryRadiusValue": "编辑外接半径值",
-  "uiPackingFiles": "包装文件",
-  "uiReplacingModFiles": "替换MOD文件",
+  "uiPackingFiles": "正在打包文件",
+  "uiReplacingModFiles": "正在替换MOD文件",
   "uiAllDone": "全部结束",
   "uiMakeSureToReapplyThisMod": "必须重新应用此MOD",
   "uiBoundaryRadiusValueNotFound": "未找到边界半径值",
@@ -377,7 +377,7 @@
   "uiHoldToDeleteThisBackground": "(长按)删除此背景",
   "uiOpenInFileExplorer": "在文件资源管理器中打开",
   "uiCreateBackground": "创建新背景",
-  "uiSwappedAvailableBackgrounds": "交换-可用背景",
+  "uiSwappedAvailableBackgrounds": "交换的可用背景",
   "uiHoldToRestoreThisBackgroundToItsOriginal": "(长按)还原此背景",
   "uiRestoreAll": "(长按)全部恢复",
   "uiCroppedImageName": "修剪图像名称",
